--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="text" class="form-control" id="firstName" placeholder="First Name*" required>
         <input type="text" class="form-control" id="lastName" placeholder="Last Name*" required>
         <input type="email" class="form-control" id="email" placeholder="Email*" required>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary">Submit</button>
       </form>
     </div>
 
