--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
       firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script src="./app.js"/>
+    <script src="./app.js"></script>
   </body>
 </html>
