--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="HY7TPVOEghoUHZCnl7lShj6iLUIaQsvrNon6RetDoP4" />
     <title>We Are Arc.</title>
 
     <!-- Favicons -->
